--- a/LawyerbackEnd/LawyerbackEnd/Views/Home/Index.cshtml
+++ b/LawyerbackEnd/LawyerbackEnd/Views/Home/Index.cshtml
@@ -83,7 +83,7 @@
             @foreach (var item in Model.practises)
             {
                 <div class="col-md-6 col-lg-3 practice-item-4cols">
-                    <a href="practice-single-page.html">
+                    <a asp-action="Practice" asp-controller="Home">
                         <div class="practice-item">
                             <div class="practice-icon">@Html.Raw(item.Link)</div>
                             <h3 class="practice-title">@Html.Raw(item.Description)</h3>
@@ -180,14 +180,14 @@
                             {
                                 <li><a href="#" target="_blank">@Html.Raw(item.IconsComminucate3)</a></li>
                             }
-                            
+
                         </ul>
                     </div>
                 </div>
             }
         </div>
         <!-- /row -->
-        <div class="view-more alignc"><a href="about-us.html">View More</a></div>
+        <div class="view-more alignc"><a asp-action="TeamAllDetails" asp-controller="Home">View More</a></div>
     </div>
     <!-- /container -->
 </section>
@@ -288,7 +288,7 @@
                     <span class="heading-subtitle white">@Html.Raw(item.Header)</span>
                     <h2 class="margin-b16">@Html.Raw(item.Title)</h2>
                     <p> @Html.Raw(item.Description)</p>
-                    <div class="view-more view-more-white margin-t54 alignc"><a href="@Html.Raw(item.ButtonLink)">@Html.Raw(item.Buttontext)</a></div>
+                    <div class="view-more view-more-white margin-t54 alignc"><a asp-action="Contact" asp-controller="Home">@Html.Raw(item.Buttontext)</a></div>
 
                 }
             </div>
@@ -301,57 +301,50 @@
 
 <section class="section-holder">
     <div class="container">
-        <div class="row">
-            <div class="col-lg-6 margin-bm54">
-                <span class="heading-subtitle">Contact Us</span>
-                <h2 class="section-heading-title margin-b16">Free Case Evaluation</h2>
-                <p>Aenean facilisis, neque a varius porttitor, risus dui tempus libero, dictum aliquet justo enim vitae lorem. Aliquam lacinia lacinia mi ac convallis. Nulla et lacus et risus laoreet consectetur.</p>
-                <div class="icon-box-wrapper">
-                    <div class="icon-box-icon"><i class="fas fa-map-marker-alt"></i></div>
-                    <div class="icon-box-content">
-                        <div class="icon-box-title">OFFICE</div>
-                        <p class="icon-box-description">40 Park Ave, Brooklyn, New York</p>
-                    </div>
+        <div class="row align-items-center">
+            @foreach (var item in Model.allContacts)
+            {
+                <div class="col-lg-5">
+                    <h3 class="margin-b16">@Html.Raw(item.AddressHeader)</h3>
+                    <p>@Html.Raw(item.Address)</p>
+                    <hr />
+                    <h3 class="margin-b16">@Html.Raw(item.PhoneHeader)</h3>
+                    <p>@Html.Raw(item.Phone)</p>
+                    <hr />
+                    <h3 class="margin-b16">@Html.Raw(item.OfficeHeader)</h3>
+                    <p>@Html.Raw(item.Hours)</p>
                 </div>
-                <!-- /icon-box-wrapper -->
-                <div class="icon-box-wrapper">
-                    <div class="icon-box-icon"><i class="fas fa-phone-alt"></i></div>
-                    <div class="icon-box-content">
-                        <div class="icon-box-title">PHONE</div>
-                        <p class="icon-box-description">1-800-000-111</p>
-                    </div>
-                </div>
-                <!-- /icon-box-wrapper -->
-                <div class="icon-box-wrapper">
-                    <div class="icon-box-icon"><i class="far fa-envelope"></i></div>
-                    <div class="icon-box-content">
-                        <div class="icon-box-title">EMAIL</div>
-                        <p class="icon-box-description">contact@example.com</p>
-                    </div>
-                </div>
-                <!-- /icon-box-wrapper -->
-                <div class="gmaps margin-t54">
-                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3024.9762977047603!2d-73.96009086693977!3d40.69651965846399!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c25bc1f922373f%3A0x398427d98fba822e!2sPark+Ave%2C+Brooklyn%2C+NY%2C+USA!5e0!3m2!1sen!2sro!4v1471514814808">
-                    </iframe>
-                </div>
-            </div>
-            <div class="col-lg-6">
+            }
+            <div class="col-lg-7">
+                @foreach (var item in Model.allContacts)
+                {
+                    <h2 class="section-heading-title margin-b16">@Html.Raw(item.ContactHeader)</h2>
+                    <p>@Html.Raw(item.ContactHeaderDescription)</p>
+                }
+
                 <div id="contact-form-holder">
-                    <form method="post" id="contact-form" action='include/contact-process.php'>
-                        <div class="margin-b32"><label>Name</label><input type="text" name="name" class="comm-field" /></div>
-                        <div class="margin-b32"><label>Email</label><input type="text" name="email" class="comm-field" /> </div>
-                        <div class="margin-b32"><label>Subject</label><input type="text" name="subject" class="comm-field" /> </div>
-                        <div class="margin-b32"><label>Message</label><textarea name="message" id="msg-contact" rows="5"></textarea></div>
+
+                    <form method="post" enctype="multipart/form-data">
+
+                        <div class="row">
+
+                            <div class="col-lg-4 margin-b32"><input type="text" asp-for="@Model.contact.Name" class="comm-field" placeholder="Name" /></div>
+                            <div class="col-lg-4 margin-b32"><input type="text" asp-for="@Model.contact.Email" class="comm-field" placeholder="Email" /> </div>
+                            <div class="col-lg-4 margin-b32"><input type="text" asp-for="@Model.contact.Subject" class="comm-field" placeholder="Subject" /> </div>
+                        </div>
+                        <div class="margin-b32"><textarea asp-for="@Model.contact.Message" id="msg-contact" rows="5" placeholder="Message"></textarea></div>
                         <p class="antispam">Leave this empty: <input type="text" name="url" /></p>
-                        <p><input type="submit" value="Send message" id="submit" /></p>
+                        <button type="submit" class="btn btn-primary">Submit</button>
+
                     </form>
+
                 </div>
                 <!-- contact-form-holder-->
                 <div id="output-contact"></div>
             </div>
+            <!-- /col-lg-7-->
         </div>
         <!-- /row -->
     </div>
     <!-- /container -->
 </section>
-
