--- a/LawyerbackEnd/LawyerbackEnd/Views/Home/Pages.cshtml
+++ b/LawyerbackEnd/LawyerbackEnd/Views/Home/Pages.cshtml
@@ -61,8 +61,8 @@
             <div class="col-lg-8 offset-lg-2 alignc">
                 @foreach (var item in Model.pageContacts)
                 {
-                    <span class="heading-subtitle">@item.Header</span>
-                    <h2 class="section-heading-title">@item.Title</h2>
+                    <span class="heading-subtitle">@Html.Raw(item.Header)</span>
+                    <h2 class="section-heading-title">@Html.Raw(item.Title)</h2>
                 }
             </div>
         </div>
