--- a/LawyerbackEnd/LawyerbackEnd/Views/Shared/_Layout.cshtml
+++ b/LawyerbackEnd/LawyerbackEnd/Views/Shared/_Layout.cshtml
@@ -46,14 +46,9 @@
                         <a asp-action="Attorneys" asp-controller="Home">Attorneys</a>
                         
                     </li>
-                    <li class="menu-item menu-item-has-children">
-                        <a href="case-studies.html">Case Studies</a>
-                        <ul class="sub-menu">
-                            <li class="menu-item"><a href="case-studies-2-cols.html">Case Studies 2 Cols</a></li>
-                            <li class="menu-item"><a href="case-studies-3-cols.html">Case Studies 3 Cols</a></li>
-                            <li class="menu-item"><a href="case-studies.html">Case Studies 4 Cols</a></li>
-                            <li class="menu-item"><a href="cases-single-page.html">Single Case</a></li>
-                        </ul>
+                    <li class="">
+                        <a asp-action="CaseStudies" asp-controller="Home">Case Studies</a>
+                        
                     </li>
                     <li class="">
                         <a asp-action="Blog" asp-controller="Home">Blog</a>
