--- a/LawyerbackEnd/LawyerbackEnd/Views/Home/CaseStudies.cshtml
+++ b/LawyerbackEnd/LawyerbackEnd/Views/Home/CaseStudies.cshtml
@@ -27,7 +27,7 @@
             {
                 <div class="case-study case-4col blog-item-masonry @item.categorys.className">
                     <div class="case-img-holder">
-                        <a asp-controller="Case" asp-action="Details" asp-route-id="@item.Id">
+                        <a asp-controller="Home" asp-action="CaseStudiesDetails" asp-route-id="@item.Id">
                             <div class="case-img" style="background-image:url(../images/aboutCase/@item.Image);"></div>
                         </a>
                     </div>
