--- a/LawyerbackEnd/LawyerbackEnd/Views/Home/CaseStudies.cshtml
+++ b/LawyerbackEnd/LawyerbackEnd/Views/Home/CaseStudies.cshtml
@@ -1,6 +1,6 @@
 ﻿@model List<Case>
 
-<div class="page-head " style="background-image:url('images/top-bkgs/case-results.jpg');">
+<div class="page-head " style="background-image:url('../images/cases/casBg.jpg');background-size:cover;">
     <div class="inner-desc">
         <div class="container">
             <h1 class="page-title">Case Studies</h1>
