--- a/LawyerbackEnd/LawyerbackEnd/Areas/Admin/Views/Shared/AdminLayout.cshtml
+++ b/LawyerbackEnd/LawyerbackEnd/Areas/Admin/Views/Shared/AdminLayout.cshtml
@@ -136,6 +136,21 @@
             </li>
 
             <li class="nav-item">
+                <a class="nav-link collapsed" href="~/admin/#" data-toggle="collapse" data-target="#collapseUtilities8"
+                   aria-expanded="true" aria-controls="collapseUtilities8">
+                    <i class="fas fa-sliders-h"></i>
+                    <span>Case Studies</span>
+                </a>
+                <div id="collapseUtilities8" class="collapse" aria-labelledby="headingUtilities"
+                     data-parent="#accordionSidebar">
+                    <div class="bg-white py-2 collapse-inner rounded">
+                        <h6 class="collapse-header">Custom Utilities:</h6>
+                        <a class="collapse-item" href="~/admin/Case/Index">Case Slider</a>
+                    </div>
+                </div>
+            </li>
+
+            <li class="nav-item">
                 <a class="nav-link collapsed" href="~/admin/#" data-toggle="collapse" data-target="#collapseUtilities3"
                    aria-expanded="true" aria-controls="collapseUtilities3">
                     <i class="fas fa-blog"></i>
