--- a/LawyerbackEnd/LawyerbackEnd/Views/Home/CaseStudiesDetails.cshtml
+++ b/LawyerbackEnd/LawyerbackEnd/Views/Home/CaseStudiesDetails.cshtml
@@ -1,7 +1,7 @@
 ﻿@model Case
 @{ List<Case> cases = ViewBag.Cases; }
 <!-- TOP IMAGE -->
-<div class="page-head " style="background-image:url('images/top-bkgs/case-results.jpg');">
+<div class="page-head " style="background-image:url('../images/cases/casBg.jpg');background-size:cover;">
     <div class="inner-desc">
         <div class="container">
             <h1 class="page-title">Case Single Page</h1>
@@ -17,8 +17,8 @@
             <div class="row">
                 <div class="col-lg-9">
                     <h3>@Model.Title</h3>
-                    <p>@Model.Description</p>
-                    <img src="~/assets/images/cases/@Model.Image" class="img-fluid margin-b32" alt="">
+                    <p>@Html.Raw(Model.Description)</p>
+                    <img src="~/images/aboutCase/@Model.Image" class="img-fluid margin-b32" alt="">
                     <h3>The Challenge</h3>
                     <p>@Model.Challenge</p>
                     <h3>The Solution</h3>
