--- a/LawyerbackEnd/LawyerbackEnd/Views/Home/Pricing.cshtml
+++ b/LawyerbackEnd/LawyerbackEnd/Views/Home/Pricing.cshtml
@@ -1,6 +1,6 @@
 ﻿
 @model HomeVM
-<div class="page-head " style="background-image:url('images/home/slider-2.jpg');">
+<div class="page-head " style="background-image:url('../images/aboutCase/prBg.jpg');">
     <div class="inner-desc">
         <div class="container">
             <h1 class="page-title">Pricing</h1>
