--- a/LawyerbackEnd/LawyerbackEnd/Views/Shared/_Layout.cshtml
+++ b/LawyerbackEnd/LawyerbackEnd/Views/Shared/_Layout.cshtml
@@ -104,10 +104,10 @@
                             <h5 class="widgettitle">Quick Links</h5>
                             <div class="textwidget custom-html-widget">
                                 <ul>
-                                    <li> <a href="#">Home</a></li>
-                                    <li><a href="#">About</a></li>
-                                    <li><a href="#">Practice Areas</a></li>
-                                    <li><a href="#">Contact</a></li>
+                                    <li> <a asp-action="Index" asp-controller="Home">Home</a></li>
+                                    <li><a asp-action="Pages" asp-controller="Home">About</a></li>
+                                    <li><a asp-action="Practice" asp-controller="Home">Practice Areas</a></li>
+                                    <li><a asp-action="Contact" asp-controller="Home">Contact</a></li>
                                 </ul>
                             </div>
                         </div>
